[gd_scene load_steps=27 format=3 uid="uid://8yv7excojcg0"]

[ext_resource type="Theme" uid="uid://b6a0ip4p72tgx" path="res://UI/new_theme.tres" id="1_p1cib"]
[ext_resource type="Script" uid="uid://ci8vq73u23viy" path="res://Scenes/Menus/MainMenu/main_menu.gd" id="2_ivytu"]
[ext_resource type="PackedScene" uid="uid://y1qa1g3ic8sp" path="res://Worlds/GreenPlanet/Levels/first_level.tscn" id="3_l8r4a"]
[ext_resource type="AudioStream" uid="uid://cp6ph4ra7u5rk" path="res://Scenes/UI/drop_003.ogg" id="5_cwn2i"]
[ext_resource type="Script" uid="uid://cbwxa2a4hfcy4" path="res://Scripts/Resources/enemy.gd" id="5_u514r"]
[ext_resource type="Texture2D" uid="uid://cdnhe2mi5c5ln" path="res://Assets/Textures/dead_eye_dog.png" id="6_rsxwm"]
[ext_resource type="Texture2D" uid="uid://g00wwrlxxdc5" path="res://Assets/Textures/icon_eye_dog.png" id="7_2sylv"]
[ext_resource type="Texture2D" uid="uid://dj13g1w14mekw" path="res://Assets/Textures/eye_dog.png" id="8_1vnym"]
[ext_resource type="Resource" uid="uid://cvehqh4tt28g7" path="res://Resources/Enemies/dog_fast.tres" id="9_hdp0s"]
[ext_resource type="Resource" uid="uid://dxi17xvdlhkvc" path="res://Resources/Enemies/dog_heavy.tres" id="10_day26"]
[ext_resource type="Resource" uid="uid://boik1gnpl4v0a" path="res://Resources/Enemies/dog_boss.tres" id="11_1mes0"]
[ext_resource type="Resource" uid="uid://dsgkwh3opyqtx" path="res://Resources/Enemies/airenemy.tres" id="12_5vny5"]
[ext_resource type="Resource" uid="uid://bffhb5krs5elm" path="res://Resources/Enemies/airenemy2.tres" id="13_xb7gj"]
[ext_resource type="Texture2D" uid="uid://cr1ucbuw3iotp" path="res://Assets/Textures/first_win_achievements.png" id="15_74epv"]
[ext_resource type="Script" uid="uid://cjr0pbqisd51v" path="res://Scenes/Menus/MainMenu/achievements_menu.gd" id="15_sv1gy"]
[ext_resource type="Texture2D" uid="uid://cpa1hl36xfplg" path="res://Assets/Textures/first_scroll_seen.png" id="16_sv1gy"]
[ext_resource type="Texture2D" uid="uid://ctbi3gm1me1t5" path="res://Assets/Textures/unlock_mage_achievement.png" id="17_6t4jd"]
[ext_resource type="Script" uid="uid://cxrm2naq75jo1" path="res://mod_menu.gd" id="19_6t4jd"]
[ext_resource type="FontFile" uid="uid://c3hwdjscf2hnk" path="res://Assets/Fonts/OpenType (.otf)/Kaph-Regular.otf" id="20_y5bw6"]

[sub_resource type="ViewportTexture" id="ViewportTexture_5u75i"]
viewport_path = NodePath("SubViewport")

[sub_resource type="AtlasTexture" id="AtlasTexture_6t4jd"]
resource_local_to_scene = true
atlas = ExtResource("8_1vnym")
region = Rect2(0, 0, 32, 32)

[sub_resource type="Resource" id="Resource_y5bw6"]
resource_local_to_scene = true
script = ExtResource("5_u514r")
title = "dog"
target_type = 1
icon = ExtResource("7_2sylv")
death_sprite = ExtResource("6_rsxwm")
sprite = SubResource("AtlasTexture_6t4jd")
spawn_power = 10
health = 180
penalty = 10
movement_speed = 1.2
spawn_cooldown = 1.2
common_group = 1
common_cost = 1
uncommon_group = 1
uncommon_cost = 1
rare_group = 1
rare_cost = 1
epic_group = 1
epic_cost = 1
legendary_group = 1
legendary_cost = 1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2jyua"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_cwn2i")

[sub_resource type="AtlasTexture" id="AtlasTexture_y5bw6"]
atlas = ExtResource("15_74epv")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_q26na"]
atlas = ExtResource("16_sv1gy")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aj5m"]
atlas = ExtResource("17_6t4jd")
region = Rect2(0, 0, 36, 36)

[node name="MainMenu" type="Control" node_paths=PackedStringArray("bg_level", "game_select_menu", "main_controls", "seed_entry", "profile_controls", "mods_controls")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p1cib")
script = ExtResource("2_ivytu")
bg_level = NodePath("SubViewport/GridMap")
game_select_menu = NodePath("GameSelectMenu")
main_controls = NodePath("MainControls")
seed_entry = NodePath("GameSelectMenu/VBoxContainer/HBoxContainer2/LineEdit")
profile_controls = NodePath("ProfileEditor")
mods_controls = NodePath("ModsMenu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_5u75i")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 0.5644, 0.344, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -35
theme_override_constants/outline_size = 55
theme_override_fonts/font = ExtResource("20_y5bw6")
theme_override_font_sizes/font_size = 146
text = "decked
out
defense"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainControls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.95
anchor_right = 0.95
anchor_bottom = 0.95
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayButton" type="Button" parent="MainControls"]
layout_mode = 2
text = "Play"

[node name="MultiplayerButton" type="Button" parent="MainControls"]
layout_mode = 2
disabled = true
text = "Multiplayer"

[node name="ModsButton" type="Button" parent="MainControls"]
layout_mode = 2
text = "Mods"

[node name="OptionsButton" type="Button" parent="MainControls"]
layout_mode = 2
text = "Options
"

[node name="QuitButton" type="Button" parent="MainControls"]
layout_mode = 2
text = "Quit
"

[node name="ProfileEditor" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.97
anchor_top = 0.95
anchor_right = 0.97
anchor_bottom = 0.95
offset_left = -421.0
offset_top = -150.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ProfileEditor"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileEditor/VBoxContainer"]
layout_mode = 2
text = "Current Profile"

[node name="HBoxContainer" type="HBoxContainer" parent="ProfileEditor/VBoxContainer"]
layout_mode = 2

[node name="DisplayName" type="Label" parent="ProfileEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dummy Name"

[node name="MarginContainer" type="MarginContainer" parent="ProfileEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 29
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 31
theme_override_constants/margin_bottom = 4

[node name="DisplayNameEdit" type="Button" parent="ProfileEditor/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "View Profile"

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="GridMap" parent="SubViewport" instance=ExtResource("3_l8r4a")]
enemy_pool = Array[ExtResource("5_u514r")]([SubResource("Resource_y5bw6"), ExtResource("9_hdp0s"), ExtResource("10_day26"), ExtResource("11_1mes0"), ExtResource("12_5vny5"), ExtResource("13_xb7gj")])

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_2jyua")
bus = &"SFX"

[node name="AudioListener3D" type="AudioListener3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0)
current = true

[node name="GameSelectMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameSelectMenu"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameSelectMenu/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="GameSelectMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="GameSelectMenu/VBoxContainer"]
layout_mode = 2
text = "Select a game to begin"

[node name="StandardButton" type="Button" parent="GameSelectMenu/VBoxContainer"]
layout_mode = 2
text = "Standard (20 waves)"

[node name="DailyButton" type="Button" parent="GameSelectMenu/VBoxContainer"]
layout_mode = 2
text = "Daily Challenge"

[node name="EndlessButton" type="Button" parent="GameSelectMenu/VBoxContainer"]
layout_mode = 2
text = "Endless"

[node name="HBoxContainer2" type="HBoxContainer" parent="GameSelectMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameSelectMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Seed:"

[node name="LineEdit" type="LineEdit" parent="GameSelectMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "leave blank for random game"

[node name="Changelog" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 100.0
offset_right = -200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Changelog"]
layout_mode = 2

[node name="Label" type="Label" parent="Changelog/VBoxContainer"]
layout_mode = 2
text = "Changelog"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Changelog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Changelog/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label6" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label10" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Added: New Mage card: Ascension"

[node name="Label13" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Added: New Mechanic card: Overclock"

[node name="Label11" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Fixed: Interaction text now properly disappears if the wave starts"

[node name="Label3" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Fixed: Refrigerator tower now applies cold to enemies"

[node name="Label12" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Fixed: Seed now correctly changes on consecutive random seed runs"

[node name="Label4" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Balance: Increased Bubble movement speed 1.5 > 2.0"

[node name="Label7" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Balance: Increased Spike health 9 > 12"

[node name="Label8" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Balance: Increased Heavy Dog speed 0.8 > 0.9"

[node name="Label14" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Balance: Decreased Boss Dog speed 1.0 > 0.8"

[node name="Label15" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Balance: Increased Boss Dog health 1000 > 3000"

[node name="Label16" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Balance: Increased Boss Dog spawn chance"

[node name="Label9" type="Label" parent="Changelog/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Balance: Adjusted Glue Launcher rarity [Uncommon -> Common]"

[node name="HBoxContainer" type="HBoxContainer" parent="Changelog/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Button" type="Button" parent="Changelog/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ProfileManager" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ProfileManager"]
layout_mode = 2

[node name="TitleBar" type="Label" parent="ProfileManager/VBoxContainer"]
layout_mode = 2
text = "Profile Viewer"

[node name="DisplayName" type="HBoxContainer" parent="ProfileManager/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileManager/VBoxContainer/DisplayName"]
layout_mode = 2
text = "Display Name"

[node name="LineEdit" type="LineEdit" parent="ProfileManager/VBoxContainer/DisplayName"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Display name"
alignment = 1

[node name="Stats" type="VBoxContainer" parent="ProfileManager/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileManager/VBoxContainer/Stats"]
layout_mode = 2
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wins" type="HBoxContainer" parent="ProfileManager/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileManager/VBoxContainer/Stats/Wins"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wins"
vertical_alignment = 1

[node name="Label2" type="Label" parent="ProfileManager/VBoxContainer/Stats/Wins"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Losses" type="HBoxContainer" parent="ProfileManager/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileManager/VBoxContainer/Stats/Losses"]
layout_mode = 2
size_flags_horizontal = 3
text = "Losses"
vertical_alignment = 1

[node name="Label2" type="Label" parent="ProfileManager/VBoxContainer/Stats/Losses"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Winrate" type="HBoxContainer" parent="ProfileManager/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileManager/VBoxContainer/Stats/Winrate"]
layout_mode = 2
size_flags_horizontal = 3
text = "Winrate (last 20 games)"
vertical_alignment = 1

[node name="Label2" type="Label" parent="ProfileManager/VBoxContainer/Stats/Winrate"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EngineerCardsBought" type="HBoxContainer" parent="ProfileManager/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileManager/VBoxContainer/Stats/EngineerCardsBought"]
layout_mode = 2
size_flags_horizontal = 3
text = "plans bought"
vertical_alignment = 1

[node name="Label2" type="Label" parent="ProfileManager/VBoxContainer/Stats/EngineerCardsBought"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MageCardsBought" type="HBoxContainer" parent="ProfileManager/VBoxContainer/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="ProfileManager/VBoxContainer/Stats/MageCardsBought"]
layout_mode = 2
size_flags_horizontal = 3
text = "scrolls bought"
vertical_alignment = 1

[node name="Label2" type="Label" parent="ProfileManager/VBoxContainer/Stats/MageCardsBought"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UnlockAll" type="Button" parent="ProfileManager/VBoxContainer"]
layout_mode = 2
text = "Unlock All Content"

[node name="LockAll" type="Button" parent="ProfileManager/VBoxContainer"]
layout_mode = 2
text = "Lock All Content"

[node name="AchievementsButton" type="Button" parent="ProfileManager/VBoxContainer"]
layout_mode = 2
text = "View Achievements"

[node name="Controls" type="HBoxContainer" parent="ProfileManager/VBoxContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="ProfileManager/VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Confirm" type="Button" parent="ProfileManager/VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="AchievementsMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_sv1gy")

[node name="VBoxContainer" type="VBoxContainer" parent="AchievementsMenu"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AchievementsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AchievementsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Achievements"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="AchievementsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="GridContainer" type="GridContainer" parent="AchievementsMenu/VBoxContainer"]
layout_mode = 2
columns = 9

[node name="FirstWin" type="Button" parent="AchievementsMenu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
tooltip_text = "What could I possibly have to do to earn this??"
icon = SubResource("AtlasTexture_y5bw6")
icon_alignment = 1
expand_icon = true

[node name="SeenMageCard" type="Button" parent="AchievementsMenu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
tooltip_text = "Who would use this old thing anyway?"
icon = SubResource("AtlasTexture_q26na")
icon_alignment = 1
expand_icon = true

[node name="UnlockedMage" type="Button" parent="AchievementsMenu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
tooltip_text = "Ok, here me out
"
icon = SubResource("AtlasTexture_3aj5m")
icon_alignment = 1
expand_icon = true

[node name="ModsMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("19_6t4jd")

[node name="VBoxContainer" type="VBoxContainer" parent="ModsMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="ModsMenu/VBoxContainer"]
layout_mode = 2
text = "Mods"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ModsMenu/VBoxContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ModsMenu/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ModsMenu/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelMods" type="Button" parent="ModsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="ConfirmMods" type="Button" parent="ModsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Confirm"

[connection signal="mouse_entered" from="MainControls/PlayButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainControls/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="MainControls/MultiplayerButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainControls/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="mouse_entered" from="MainControls/ModsButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainControls/ModsButton" to="." method="_on_mods_button_pressed"]
[connection signal="mouse_entered" from="MainControls/OptionsButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainControls/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="MainControls/QuitButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainControls/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="ProfileEditor/VBoxContainer/HBoxContainer/MarginContainer/DisplayNameEdit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ProfileEditor/VBoxContainer/HBoxContainer/MarginContainer/DisplayNameEdit" to="." method="_on_display_name_edit_pressed"]
[connection signal="pressed" from="GameSelectMenu/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="GameSelectMenu/VBoxContainer/StandardButton" to="." method="_on_standard_button_pressed"]
[connection signal="pressed" from="GameSelectMenu/VBoxContainer/DailyButton" to="." method="_on_daily_button_pressed"]
[connection signal="pressed" from="GameSelectMenu/VBoxContainer/EndlessButton" to="." method="_on_endless_button_pressed"]
[connection signal="pressed" from="Changelog/VBoxContainer/HBoxContainer/Button" to="." method="_on_changelog_button_pressed"]
[connection signal="pressed" from="ProfileManager/VBoxContainer/UnlockAll" to="." method="_on_unlock_all_pressed"]
[connection signal="pressed" from="ProfileManager/VBoxContainer/LockAll" to="." method="_on_lock_all_pressed"]
[connection signal="pressed" from="ProfileManager/VBoxContainer/AchievementsButton" to="." method="_on_achievements_button_pressed"]
[connection signal="pressed" from="ProfileManager/VBoxContainer/Controls/Cancel" to="." method="_on_profile_manager_cancel_pressed"]
[connection signal="pressed" from="ProfileManager/VBoxContainer/Controls/Confirm" to="." method="_on_profile_manager_confirm_pressed"]
[connection signal="pressed" from="AchievementsMenu/VBoxContainer/HBoxContainer/Button" to="." method="_on_achievements_back_button_pressed"]
[connection signal="pressed" from="ModsMenu/VBoxContainer/HBoxContainer/CancelMods" to="." method="_on_cancel_mods_pressed"]
[connection signal="pressed" from="ModsMenu/VBoxContainer/HBoxContainer/ConfirmMods" to="." method="_on_confirm_mods_pressed"]
